<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/search_title"
        app:actionViewClass="androidx.appcompat.widget.SearchView">
    </item>


    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/sort_title"
        >

        <menu>

            <item
                android:id="@+id/sort_by_repo_name"
                android:icon="@drawable/ic_sort_by_text_24dp"
                android:title="@string/sortByRepoName"
                >
            </item>

            <item
                android:id="@+id/sort_by_star_item"
                android:icon="@drawable/ic_star_24dp"
                android:title="@string/sortByStarText">
            </item>

            <item
                android:id="@+id/sort_by_updated_item"
                android:icon="@drawable/ic_date_black_24dp"
                android:title="@string/sortByDateText"
                >
            </item>

            <item
                android:id="@+id/sort_by_forks_item"
                android:icon="@drawable/ic_forked"
                android:title="@string/sortByForkedText"
                >
            </item>



        </menu>



    </item>

    <item
        android:id="@+id/login_item"
        app:showAsAction="never"
        android:title="@string/login"
        >
    </item>

</menu>