<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="gitHubRepo"
            type="my.app.githubapp.domain.GitHubRepo" />

        <variable
            name="owner"
            type="my.app.githubapp.domain.GitHubUser" />

        <variable
            name="ownerOnClick"
            type="android.view.View.OnClickListener" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/owner_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{gitHubRepo.owner.login}"
            android:layout_marginStart="@dimen/owner_name_margin_start"
            android:layout_marginTop="@dimen/margin_top"
            android:textSize="@dimen/repo_name_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:lines="1"
            tools:text="OwnerName">
        </TextView>

        <TextView
            android:id="@+id/slash_holder_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/slash"
            android:textSize="@dimen/repo_name_text_size"
            app:layout_constraintStart_toEndOf="@id/owner_name_text_view"
            app:layout_constraintTop_toTopOf="parent"
            tools:text=" / ">
        </TextView>

        <TextView
            android:id="@+id/repository_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{gitHubRepo.name}"
            android:layout_marginTop="@dimen/margin_top"
            android:textSize="@dimen/repo_name_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/slash_holder_text_view"
            app:layout_constraintTop_toTopOf="parent"
            android:lines="1"
            tools:text="RepoName">
        </TextView>

        <ImageView
            android:id="@+id/toWebImageView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/margin_end"
            android:src="@drawable/ic_open_in_browser_24dp"
            app:layout_constraintBottom_toBottomOf="@id/repository_name_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/repository_name_text_view"
            android:contentDescription="@string/look_repo_with_explorer"
            >
        </ImageView>


        <TextView
            android:id="@+id/number_of_forks_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:drawableTop="@drawable/ic_forked"
            android:gravity="center"
            android:text="@{Integer.toString(gitHubRepo.forks)}"
            app:layout_constraintEnd_toStartOf="@id/number_of_started_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/owner_name_text_view"
            tools:text="4">
        </TextView>

        <TextView
            android:id="@+id/number_of_started_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_star_24dp"
            android:gravity="center_horizontal|bottom"
            android:text="@{Integer.toString(gitHubRepo.openIssues)}"
            app:layout_constraintBottom_toBottomOf="@id/number_of_forks_text_view"
            app:layout_constraintEnd_toStartOf="@id/number_of_watchers_text_view"
            app:layout_constraintStart_toEndOf="@id/number_of_forks_text_view"
            app:layout_constraintTop_toTopOf="@id/number_of_forks_text_view"
            tools:text="3">
        </TextView>

        <TextView
            android:id="@+id/number_of_watchers_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_eye_24dp"
            android:gravity="center_horizontal|bottom"
            android:text="@{Integer.toString(gitHubRepo.watcherNumber)}"
            app:layout_constraintBottom_toBottomOf="@id/number_of_forks_text_view"
            app:layout_constraintEnd_toStartOf="@id/number_of_issues_text_view"
            app:layout_constraintStart_toEndOf="@id/number_of_started_text_view"
            app:layout_constraintTop_toTopOf="@id/number_of_forks_text_view"
            tools:text="6">
        </TextView>

        <TextView
            android:id="@+id/number_of_issues_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_issues_24dp"
            android:gravity="center_horizontal|bottom"
            android:text="@{Integer.toString(gitHubRepo.openIssues)}"
            app:layout_constraintBottom_toBottomOf="@id/number_of_forks_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/number_of_watchers_text_view"
            app:layout_constraintTop_toTopOf="@id/number_of_forks_text_view"
            tools:text="2">
        </TextView>


        <androidx.cardview.widget.CardView
            android:id="@+id/show_languages_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            app:layout_constraintTop_toBottomOf="@id/number_of_forks_text_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="@dimen/text_margin_top"
                    android:paddingBottom="@dimen/text_margin_bottom"
                    android:text="@string/languages"
                    android:textSize="@dimen/text_size">
                </TextView>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/show_languages_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/selector_expand_button">
                </androidx.appcompat.widget.AppCompatImageButton>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/languages_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/show_languages_card_view"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="3"
            tools:listitem="@layout/item_language">
        </androidx.recyclerview.widget.RecyclerView>


        <include
            android:id="@+id/owner_info_layout"
            layout="@layout/layout_owner_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/languages_recycler_view"
            bind:owner="@{owner}"
            bind:onClickListener="@{ownerOnClick}"
            >
        </include>


        <androidx.cardview.widget.CardView
            android:id="@+id/show_contributors_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/owner_info_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/text_margin_top"
                    android:paddingBottom="@dimen/text_margin_bottom"
                    android:text="@string/contributors"
                    android:textSize="@dimen/text_size">
                </TextView>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/show_contributors_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/selector_expand_button">
                </androidx.appcompat.widget.AppCompatImageButton>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/contributors_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:layout_constraintTop_toBottomOf="@id/show_contributors_card_view"
            tools:listitem="@layout/item_contributor"
            tools:orientation="horizontal">
        </androidx.recyclerview.widget.RecyclerView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>